--- a/serverless.yml
+++ b/serverless.yml
@@ -42,6 +42,8 @@ custom:
   region: ${opt:region, self:provider.region}
   ListingsDB: ${self:custom.stage}-listings
   BookingsDB: ${self:custom.stage}-bookings
+  QueueName: ${self:provider.environment.queu_name}-${self:provider.stage}
+
   tableThroughputs:
     prod: 1
     default: 1
