--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "apollo-server-lambda": "^2.14.3",
-    "graphql": "^14.3.0",
-    "aws-sdk": "2.694.0"
+    "aws-sdk": "^2.819.0",
+    "graphql": "^14.3.0"
   }
 }
